--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "beauty-blog",
   "version": "0.1.0",
   "private": true,
+  "main": "server/index.js",
+  "proxy": "http://localhost:5050",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -19,8 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:5050",
+  }, 
   "eslintConfig": {
     "extends": [
       "react-app",
