--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-promise-middleware": "^6.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
