--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "massive": "^6.10.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
